--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
   %body
     %header.header
       .header__left
-        = link_to "Quizzzzz", root_path, class: "header__left__text"
+        = link_to "Quizz", root_path, class: "header__left__text"
       - if user_signed_in?
         .header__right
           %ul.header__right__list
