urlの直入力のバリデーション

--- a/app/views/questions/top.html.haml
+++ b/app/views/questions/top.html.haml
@@ -2,7 +2,7 @@
   .container
     .contents-left
       .contents-left__header
-        %h2.contents-left__header__title Quizzzzz
+        %h2.contents-left__header__title Quizz
         %p.contents-left__header__text.contents-left__header__size クイズに答えて自分の知識のレベルをあげよう!
         %p.contents-left__header__size 自分でクイズを作ることもできるよ!
       .contents-left__icon
