--- a/app/assets/stylesheets/_questions.scss
+++ b/app/assets/stylesheets/_questions.scss
@@ -9,6 +9,9 @@
 
     &__question{
       text-decoration: none;
+      color: black;
+      display: inline-block;
+      width: 100%;
     }
 
     &__question:hover{
@@ -64,7 +67,15 @@
     transition: .4s;
     &__question{
       text-decoration: none;
-      
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      color: black;
+    }
+
+    &__question:hover {
+      color: white ;
+      background:  #5bb7ae;  
     }
   }
 
