--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,6 +3,10 @@
     .user-content__name
       = @user.name
     .user-content__index
+      %h1 Level
+    .user-content__questions
+      = @user.level_id
+    .user-content__index
       %h1 正答数
     .user-content__questions
       = @user.experience
