--- a/app/assets/stylesheets/_quiz.scss
+++ b/app/assets/stylesheets/_quiz.scss
@@ -34,6 +34,30 @@ html {
               font-size: 18px;
               line-height: 70px;
               margin-right: 15px;
+              &__search {
+                &__form {
+                  position: relative;
+                  &__tag {
+                    background: #f5f5f5;
+                    border-radius: 4px;
+                    &__btn {
+                      position: absolute;
+                      opacity: 0;
+                      width: 10px;
+                      left: 190px;
+                      top: 28px;
+                      z-index: 5;
+                      cursor: pointer;
+                    }
+                  }
+                  .fa-search {
+                    position: absolute;
+                    left: 187px;
+                    top: 28px;
+                    z-index: 4;
+                  }  
+                }
+              }
               &__name {
                 color: #50565c;
                 padding: 10px;
@@ -52,7 +76,6 @@ html {
             }
           }
         }
-        
     }
 
     .wrapper {
