クイズ作成ページの正解ボタンのラジオボタンをラベルと同化

--- a/app/assets/stylesheets/_question.scss
+++ b/app/assets/stylesheets/_question.scss
@@ -33,7 +33,7 @@
             display: inline-block;
             width: 600px;
             box-sizing: border-box;
-
+            margin-right: -17px;
           }
           
         }
@@ -56,7 +56,7 @@
             display: inline-block;
             margin-left: 30px;
             input[type=radio] {
-              // display: none;
+              display: none;
               cursor: pointer;
             }
 
@@ -70,11 +70,12 @@
               border: 2px solid #006DD9;
               border-radius: 5px;	
               display: inline-block;
+              cursor: pointer;
             }
 
-            // &__l:hover {
-            //   background-color: #E2EDF9
-            // }
+            &__l:hover {
+              background-color: #E2EDF9
+            }
 
             input[type=radio]:checked + label {
               background: #31A9EE;
@@ -104,9 +105,7 @@
           padding: 0.25em 0.5em;
           text-decoration: none;
           color: #FFF;
-          background:#2b8ae9;/*背景色*/
-          border-bottom: solid 2px#2b8ae9;/*少し濃い目の色に*/
-          border-radius: 4px;/*角の丸み*/
+          border-radius: 4px;
           box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
           font-weight: bold;
           &__b {
@@ -114,11 +113,11 @@
             width: 150px;
             cursor: pointer;
             font-size: 30px;
-            display: block;
+            display: inline-block;
           }
         }
 
-        &__btn:active {
+        &__b:active {
           border-bottom: solid 2px #fd9535;
           box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
         }
