--- a/app/views/questions/new.html.haml
+++ b/app/views/questions/new.html.haml
@@ -26,7 +26,7 @@
                   %br/
                 .contents-create__field__input__check
                   = a.radio_button :correct, "正解", class: "contents-create__field__input__check__c"
-                  = a.label :"正解", class: "contents-create__field__input__check__l"
+                  = a.label "correct_正解", :"正解", class: "contents-create__field__input__check__l"
           .contents-create__field__genre
             = f.label :"ジャンル", class: "contents-create__field__genre__label"
             %br/
